removes robotstxt fetching logic

--- a/Robotstxt_Stats.ipynb
+++ b/Robotstxt_Stats.ipynb
@@ -2,250 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] downloading https://www.google.com/robots.txt\n",
-      "[1] written https://www.google.com/robots.txt\n",
-      "[2] downloading https://www.youtube.com/robots.txt\n",
-      "[2] written https://www.youtube.com/robots.txt\n",
-      "[3] downloading https://www.baidu.com/robots.txt\n",
-      "[3] written https://www.baidu.com/robots.txt\n",
-      "[4] downloading https://www.facebook.com/robots.txt\n",
-      "[4] written https://www.facebook.com/robots.txt\n",
-      "[5] downloading https://www.qq.com/robots.txt\n",
-      "[5] written https://www.qq.com/robots.txt\n",
-      "[6] downloading https://www.wikipedia.org/robots.txt\n",
-      "[6] written https://www.wikipedia.org/robots.txt\n",
-      "[7] downloading https://www.tmall.com/robots.txt\n",
-      "[7] written https://www.tmall.com/robots.txt\n",
-      "[8] downloading https://www.taobao.com/robots.txt\n",
-      "[8] written https://www.taobao.com/robots.txt\n",
-      "[9] downloading https://www.vk.com/robots.txt\n",
-      "[9] written https://www.vk.com/robots.txt\n",
-      "[10] downloading https://www.sohu.com/robots.txt\n",
-      "[10] written https://www.sohu.com/robots.txt\n",
-      "[11] downloading https://www.yahoo.com/robots.txt\n",
-      "[11] written https://www.yahoo.com/robots.txt\n",
-      "[12] downloading https://www.amazon.com/robots.txt\n",
-      "[12] written https://www.amazon.com/robots.txt\n",
-      "[13] downloading https://www.reddit.com/robots.txt\n",
-      "[13] written https://www.reddit.com/robots.txt\n",
-      "[14] downloading https://www.sina.com.cn/robots.txt\n",
-      "[14] written https://www.sina.com.cn/robots.txt\n",
-      "[15] downloading https://www.jd.com/robots.txt\n",
-      "[15] written https://www.jd.com/robots.txt\n",
-      "[16] downloading https://www.weibo.com/robots.txt\n",
-      "[16] written https://www.weibo.com/robots.txt\n",
-      "[17] downloading https://www.360.cn/robots.txt\n",
-      "[17] written https://www.360.cn/robots.txt\n",
-      "[18] downloading https://www.login.tmall.com/robots.txt\n",
-      "[18] download failed for https://www.login.tmall.com/robots.txt\n",
-      "[18] downloading https://login.tmall.com/robots.txt\n",
-      "[18] written https://login.tmall.com/robots.txt\n",
-      "[19] downloading https://www.live.com/robots.txt\n",
-      "[19] written https://www.live.com/robots.txt\n",
-      "[20] downloading https://www.instagram.com/robots.txt\n",
-      "[20] written https://www.instagram.com/robots.txt\n",
-      "[21] downloading https://www.netflix.com/robots.txt\n",
-      "[21] written https://www.netflix.com/robots.txt\n",
-      "[22] downloading https://www.blogspot.com/robots.txt\n",
-      "[22] written https://www.blogspot.com/robots.txt\n",
-      "[23] downloading https://www.twitter.com/robots.txt\n",
-      "[23] written https://www.twitter.com/robots.txt\n",
-      "[24] downloading https://www.yandex.ru/robots.txt\n",
-      "[24] written https://www.yandex.ru/robots.txt\n",
-      "[25] downloading https://www.pages.tmall.com/robots.txt\n",
-      "[25] download failed for https://www.pages.tmall.com/robots.txt\n",
-      "[25] downloading https://pages.tmall.com/robots.txt\n",
-      "[25] written https://pages.tmall.com/robots.txt\n",
-      "[26] downloading https://www.twitch.tv/robots.txt\n",
-      "[26] written https://www.twitch.tv/robots.txt\n",
-      "[27] downloading https://www.pornhub.com/robots.txt\n",
-      "[27] written https://www.pornhub.com/robots.txt\n",
-      "[28] downloading https://www.alipay.com/robots.txt\n",
-      "[28] written https://www.alipay.com/robots.txt\n",
-      "[29] downloading https://www.mail.ru/robots.txt\n",
-      "[29] written https://www.mail.ru/robots.txt\n",
-      "[30] downloading https://www.bing.com/robots.txt\n",
-      "[30] written https://www.bing.com/robots.txt\n",
-      "[31] downloading https://www.csdn.net/robots.txt\n",
-      "[31] download failed for https://www.csdn.net/robots.txt\n",
-      "[31] downloading https://csdn.net/robots.txt\n",
-      "[31] written https://csdn.net/robots.txt\n",
-      "[32] downloading https://www.livejasmin.com/robots.txt\n",
-      "[32] written https://www.livejasmin.com/robots.txt\n",
-      "[33] downloading https://www.aliexpress.com/robots.txt\n",
-      "[33] written https://www.aliexpress.com/robots.txt\n",
-      "[34] downloading https://www.naver.com/robots.txt\n",
-      "[34] written https://www.naver.com/robots.txt\n",
-      "[35] downloading https://www.ebay.com/robots.txt\n",
-      "[35] written https://www.ebay.com/robots.txt\n",
-      "[36] downloading https://www.yahoo.co.jp/robots.txt\n",
-      "[36] written https://www.yahoo.co.jp/robots.txt\n",
-      "[37] downloading https://www.microsoft.com/robots.txt\n",
-      "[37] written https://www.microsoft.com/robots.txt\n",
-      "[38] downloading https://www.tribunnews.com/robots.txt\n",
-      "[38] written https://www.tribunnews.com/robots.txt\n",
-      "[39] downloading https://www.hao123.com/robots.txt\n",
-      "[39] written https://www.hao123.com/robots.txt\n",
-      "[40] downloading https://www.okezone.com/robots.txt\n",
-      "[40] written https://www.okezone.com/robots.txt\n",
-      "[41] downloading https://www.soso.com/robots.txt\n",
-      "[41] download failed for https://www.soso.com/robots.txt\n",
-      "[41] downloading https://soso.com/robots.txt\n",
-      "[41] download failed for https://soso.com/robots.txt\n",
-      "[41] downloading http://soso.com/robots.txt\n",
-      "[41] written http://soso.com/robots.txt\n",
-      "[42] downloading https://www.google.com.hk/robots.txt\n",
-      "[42] written https://www.google.com.hk/robots.txt\n",
-      "[43] downloading https://www.google.co.in/robots.txt\n",
-      "[43] written https://www.google.co.in/robots.txt\n",
-      "[44] downloading https://www.imdb.com/robots.txt\n",
-      "[44] written https://www.imdb.com/robots.txt\n",
-      "[45] downloading https://www.fandom.com/robots.txt\n",
-      "[45] written https://www.fandom.com/robots.txt\n",
-      "[46] downloading https://www.google.ru/robots.txt\n",
-      "[46] written https://www.google.ru/robots.txt\n",
-      "[47] downloading https://www.amazon.co.jp/robots.txt\n",
-      "[47] written https://www.amazon.co.jp/robots.txt\n",
-      "[48] downloading https://www.whatsapp.com/robots.txt\n",
-      "[48] written https://www.whatsapp.com/robots.txt\n",
-      "[49] downloading https://www.xhamster.com/robots.txt\n",
-      "[49] written https://www.xhamster.com/robots.txt\n",
-      "[50] downloading https://www.roblox.com/robots.txt\n",
-      "[50] written https://www.roblox.com/robots.txt\n",
-      "[51] downloading https://www.xvideos.com/robots.txt\n",
-      "[51] written https://www.xvideos.com/robots.txt\n",
-      "[52] downloading https://www.so.com/robots.txt\n",
-      "[52] written https://www.so.com/robots.txt\n",
-      "[53] downloading https://www.wordpress.com/robots.txt\n",
-      "[53] written https://www.wordpress.com/robots.txt\n",
-      "[54] downloading https://www.msn.com/robots.txt\n",
-      "[54] written https://www.msn.com/robots.txt\n",
-      "[55] downloading https://www.zhihu.com/robots.txt\n",
-      "[55] download failed for https://www.zhihu.com/robots.txt\n",
-      "[55] downloading https://zhihu.com/robots.txt\n",
-      "[55] download failed for https://zhihu.com/robots.txt\n",
-      "[55] downloading http://zhihu.com/robots.txt\n",
-      "[55] download failed for http://zhihu.com/robots.txt\n",
-      "[55] downloading http://www.zhihu.com/robots.txt\n",
-      "[55] download failed for http://www.zhihu.com/robots.txt\n",
-      "[56] downloading https://www.paypal.com/robots.txt\n",
-      "[56] written https://www.paypal.com/robots.txt\n",
-      "[57] downloading https://www.office.com/robots.txt\n",
-      "[57] written https://www.office.com/robots.txt\n",
-      "[58] downloading https://www.booking.com/robots.txt\n",
-      "[58] written https://www.booking.com/robots.txt\n",
-      "[59] downloading https://www.google.com.br/robots.txt\n",
-      "[59] written https://www.google.com.br/robots.txt\n",
-      "[60] downloading https://www.amazon.in/robots.txt\n",
-      "[60] written https://www.amazon.in/robots.txt\n",
-      "[61] downloading https://www.xinhuanet.com/robots.txt\n",
-      "[61] download failed for https://www.xinhuanet.com/robots.txt\n",
-      "[61] downloading https://xinhuanet.com/robots.txt\n",
-      "[61] download failed for https://xinhuanet.com/robots.txt\n",
-      "[61] downloading http://xinhuanet.com/robots.txt\n",
-      "[61] written http://xinhuanet.com/robots.txt\n",
-      "[62] downloading https://www.bongacams.com/robots.txt\n",
-      "[62] written https://www.bongacams.com/robots.txt\n",
-      "[63] downloading https://www.deloplen.com/robots.txt\n",
-      "[63] download failed for https://www.deloplen.com/robots.txt\n",
-      "[63] downloading https://deloplen.com/robots.txt\n",
-      "[63] written https://deloplen.com/robots.txt\n",
-      "[64] downloading https://www.stackoverflow.com/robots.txt\n",
-      "[64] written https://www.stackoverflow.com/robots.txt\n",
-      "[65] downloading https://www.google.de/robots.txt\n",
-      "[65] written https://www.google.de/robots.txt\n",
-      "[66] downloading https://www.tumblr.com/robots.txt\n",
-      "[66] written https://www.tumblr.com/robots.txt\n",
-      "[67] downloading https://www.babytree.com/robots.txt\n",
-      "[67] download failed for https://www.babytree.com/robots.txt\n",
-      "[67] downloading https://babytree.com/robots.txt\n",
-      "[67] download failed for https://babytree.com/robots.txt\n",
-      "[67] downloading http://babytree.com/robots.txt\n",
-      "[67] download failed for http://babytree.com/robots.txt\n",
-      "[67] downloading http://www.babytree.com/robots.txt\n",
-      "[67] written http://www.babytree.com/robots.txt\n",
-      "[68] downloading https://www.t.co/robots.txt\n",
-      "[68] written https://www.t.co/robots.txt\n",
-      "[69] downloading https://www.apple.com/robots.txt\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[69] written https://www.apple.com/robots.txt\n",
-      "[70] downloading https://www.bilibili.com/robots.txt\n",
-      "[70] written https://www.bilibili.com/robots.txt\n",
-      "[71] downloading https://www.github.com/robots.txt\n",
-      "[71] written https://www.github.com/robots.txt\n",
-      "[72] downloading https://www.imgur.com/robots.txt\n",
-      "[72] download failed for https://www.imgur.com/robots.txt\n",
-      "[72] downloading https://imgur.com/robots.txt\n",
-      "[72] written https://imgur.com/robots.txt\n",
-      "[73] downloading https://www.adobe.com/robots.txt\n",
-      "[73] written https://www.adobe.com/robots.txt\n",
-      "[74] downloading https://www.163.com/robots.txt\n",
-      "[74] written https://www.163.com/robots.txt\n",
-      "[75] downloading https://www.microsoftonline.com/robots.txt\n",
-      "[75] download failed for https://www.microsoftonline.com/robots.txt\n",
-      "[75] downloading https://microsoftonline.com/robots.txt\n",
-      "[75] download failed for https://microsoftonline.com/robots.txt\n",
-      "[75] downloading http://microsoftonline.com/robots.txt\n",
-      "[75] download failed for http://microsoftonline.com/robots.txt\n",
-      "[75] downloading http://www.microsoftonline.com/robots.txt\n",
-      "[75] download failed for http://www.microsoftonline.com/robots.txt\n",
-      "[76] downloading https://www.tianya.cn/robots.txt\n",
-      "[76] written https://www.tianya.cn/robots.txt\n",
-      "[77] downloading https://www.google.co.jp/robots.txt\n",
-      "[77] written https://www.google.co.jp/robots.txt\n",
-      "[78] downloading https://www.iqiyi.com/robots.txt\n",
-      "[78] written https://www.iqiyi.com/robots.txt\n",
-      "[79] downloading https://www.detail.tmall.com/robots.txt\n",
-      "[79] download failed for https://www.detail.tmall.com/robots.txt\n",
-      "[79] downloading https://detail.tmall.com/robots.txt\n",
-      "[79] written https://detail.tmall.com/robots.txt\n",
-      "[80] downloading https://www.pixnet.net/robots.txt\n",
-      "[80] written https://www.pixnet.net/robots.txt\n",
-      "[81] downloading https://www.google.fr/robots.txt\n",
-      "[81] written https://www.google.fr/robots.txt\n",
-      "[82] downloading https://www.ok.ru/robots.txt\n",
-      "[82] written https://www.ok.ru/robots.txt\n",
-      "[83] downloading https://www.aparat.com/robots.txt\n",
-      "[83] written https://www.aparat.com/robots.txt\n",
-      "[84] downloading https://www.mediafire.com/robots.txt\n",
-      "[84] written https://www.mediafire.com/robots.txt\n",
-      "[85] downloading https://www.soundcloud.com/robots.txt\n",
-      "[85] written https://www.soundcloud.com/robots.txt\n",
-      "[86] downloading https://www.amazon.de/robots.txt\n",
-      "[86] written https://www.amazon.de/robots.txt\n",
-      "[87] downloading https://www.bbc.com/robots.txt\n",
-      "[87] written https://www.bbc.com/robots.txt\n",
-      "[88] downloading https://www.ettoday.net/robots.txt\n",
-      "[88] written https://www.ettoday.net/robots.txt\n",
-      "[89] downloading https://www.onlinesbi.com/robots.txt\n",
-      "[89] written https://www.onlinesbi.com/robots.txt\n",
-      "[90] downloading https://www.google.es/robots.txt\n",
-      "[90] written https://www.google.es/robots.txt\n",
-      "[91] downloading https://www.amazon.co.uk/robots.txt\n",
-      "[91] written https://www.amazon.co.uk/robots.txt\n",
-      "[92] downloading https://www.dropbox.com/robots.txt\n",
-      "[92] written https://www.dropbox.com/robots.txt\n",
-      "[93] downloading https://www.avito.ru/robots.txt\n",
-      "[93] written https://www.avito.ru/robots.txt\n",
-      "[94] downloading https://www.thestartmagazine.com/robots.txt\n",
-      "[94] written https://www.thestartmagazine.com/robots.txt\n",
-      "[95] downloading https://www.detik.com/robots.txt\n"
-     ]
+     "data": {
+      "text/plain": [
+       "\"\\nimport requests as req\\n\\ndef get_plausible_url(domain):\\n    yield 'https://www.{}'.format(domain)\\n    yield 'https://{}'.format(domain)\\n    yield 'http://{}'.format(domain)\\n    yield 'http://www.{}'.format(domain)\\n\\nwith open('top10000.txt') as alexa_list:\\n    index = 1\\n    for website in alexa_list:\\n        website = website.strip()\\n\\n        for url in get_plausible_url(website):\\n            robotstxt_url = '{}/robots.txt'.format(url)\\n            print('[{}] downloading {}'.format(index, robotstxt_url))\\n            try:\\n                response = req.get(robotstxt_url, timeout=5)\\n            except:\\n                print('[{}] download failed for {}'.format(index, robotstxt_url))\\n                continue\\n            else:\\n                with open('robotstxt_new/{}'.format(website), 'wb') as f:\\n                    f.write(response.content)\\n                print('[{}] written {}'.format(index, robotstxt_url))\\n                break\\n\\n        index += 1\\n\""
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "'''\n",
     "import requests as req\n",
     "\n",
     "def get_plausible_url(domain):\n",
@@ -273,12 +45,13 @@
     "                print('[{}] written {}'.format(index, robotstxt_url))\n",
     "                break\n",
     "\n",
-    "        index += 1"
+    "        index += 1\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -490,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -1138,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
